# CppDebugger

./: .gitignore  CMakeLists.txt  README.md
src/: CppDebugger.cpp  CppDebugger.hpp
templates/: cppdbg.pc.in
tests/: CMakeLists.txt  simple.cpp
